<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/metadata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_metadata" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:focusable="true"
        android:onClick="onLoginButtonClicked"
        android:text="@string/login_button_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_track_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlayButtonClicked"
            android:text="@string/play_track_button_label" />

        <Button
            android:id="@+id/play_album_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlayButtonClicked"
            android:text="@string/play_album_button_label" />

        <Button
            android:id="@+id/play_playlist_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlayButtonClicked"
            android:text="@string/play_playlist_button_label" />

    </LinearLayout>

    <Button
        android:id="@+id/pause_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPauseButtonClicked"
        android:text="@string/pause_button_label_toggle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skip_prev_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSkipToPreviousButtonClicked"
            android:text="@string/skip_prev_button_label" />

        <Button
            android:id="@+id/skip_next_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSkipToNextButtonClicked"
            android:text="@string/skip_next_button_label" />

    </LinearLayout>

    <Button
        android:id="@+id/queue_song_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQueueSongButtonClicked"
        android:text="@string/queue_button_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toggle_shuffle_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:onClick="onToggleShuffleButtonClicked"
            android:text="@string/toggle_shuffle_button_toggle" />

        <Button
            android:id="@+id/toggle_repeat_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:onClick="onToggleRepeatButtonClicked"
            android:text="@string/toggle_repeat_button_label_toggle" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seek_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSeekButtonClicked"
            android:text="@string/seek_button_label" />

        <EditText
            android:id="@+id/seek_edittext"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="0" />

    </LinearLayout>


</LinearLayout>